--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
     <title>Filmoteka</title>
   </head>
   <body>
-    <div class="container"></div>
+    <include src="./partials/header.html"></include>
+
     <script src="./index.js"></script>
   </body>
 </html>
