--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
+    <div class="container"></div>
 
     <script src="./index.js"></script>
   </body>
