--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,9 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <div class="container" id='container'></div>
+    <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
+    
     <!-- <include src="./partials/modal.html"></include> -->
     <script src="./index.js"></script>
   </body>
