--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <include src="./partials/footer.html"></include>
 
     <!-- <include src="./partials/modal.html"></include> -->
+    <include src="./partials/developers.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
