--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
 
-    <!-- <include src="./partials/modal.html"></include> -->
     <include src="./partials/developers.html"></include>
+    <include src="./partials/modal.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
